@@ -2,7 +2,7 @@ package kr.hhplus.be.server.coupon.infrastructure.persistence.adapter;
 
 import kr.hhplus.be.server.coupon.application.port.out.LoadCouponPort;
 import kr.hhplus.be.server.coupon.application.port.out.SaveCouponPort;
-import kr.hhplus.be.server.coupon.application.RedisCouponService;
+import kr.hhplus.be.server.coupon.domain.service.RedisCouponService;
 import kr.hhplus.be.server.coupon.infrastructure.persistence.entity.CouponEntity;
 import kr.hhplus.be.server.coupon.infrastructure.persistence.repository.CouponJpaRepository;
 import org.springframework.stereotype.Component;
@@ -12,7 +12,6 @@ import java.math.BigDecimal;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 /**
  * 쿠폰 영속성 Adapter (Outgoing)
@@ -55,7 +54,8 @@ public class CouponPersistenceAdapter implements LoadCouponPort, SaveCouponPort 
 
     @Override
     public Optional<LoadCouponPort.CouponInfo> loadCouponByIdWithLock(Long couponId) {
-        return couponJpaRepository.findByIdWithLock(couponId)
+        // 낙관적 락 사용 - @Version으로 동시성 제어, 원자적 쿼리 우선 사용
+        return couponJpaRepository.findByIdWithOptimisticLock(couponId)
                 .map(this::mapToCouponInfo);
     }
 
@@ -89,12 +89,34 @@ public class CouponPersistenceAdapter implements LoadCouponPort, SaveCouponPort 
         
         return updatedRows > 0;
     }
+    
+    @Override
+    @Transactional
+    public boolean decrementIssuedCount(Long couponId) {
+        int updatedRows = couponJpaRepository.decrementIssuedCount(couponId);
+        
+        if (updatedRows > 0) {
+            // DB 업데이트 성공 시 Redis 캐시도 업데이트
+            try {
+                // 현재 발급 수량 조회
+                Optional<CouponEntity> couponOpt = couponJpaRepository.findById(couponId);
+                if (couponOpt.isPresent()) {
+                    CouponEntity coupon = couponOpt.get();
+                    redisCouponService.updateCouponIssuedCount(couponId, coupon.getIssuedCount());
+                }
+            } catch (Exception e) {
+                // Redis 업데이트 실패는 로그만 남기고 DB 업데이트는 성공으로 처리
+            }
+        }
+        
+        return updatedRows > 0;
+    }
 
     @Override
     public List<LoadCouponPort.CouponInfo> loadAllCoupons() {
         return couponJpaRepository.findAll().stream()
                 .map(this::mapToCouponInfo)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private LoadCouponPort.CouponInfo mapToCouponInfo(CouponEntity entity) {
