@@ -3,7 +3,7 @@ package kr.hhplus.be.server.order.infrastructure.persistence.adapter;
 import kr.hhplus.be.server.order.application.port.out.SaveOrderPort;
 import kr.hhplus.be.server.order.domain.Order;
 import kr.hhplus.be.server.order.domain.OrderItem;
-import kr.hhplus.be.server.order.domain.OrderHistoryEvent;
+import kr.hhplus.be.server.order.domain.event.OrderHistoryEvent;
 import kr.hhplus.be.server.order.infrastructure.persistence.entity.OrderEntity;
 import kr.hhplus.be.server.order.infrastructure.persistence.entity.OrderItemEntity;
 import kr.hhplus.be.server.order.infrastructure.persistence.entity.OrderHistoryEventEntity;
@@ -63,7 +63,7 @@ public class OrderPersistenceAdapter implements SaveOrderPort {
         // 4. OrderItem들 저장
         List<OrderItemEntity> orderItemEntities = order.getOrderItems().stream()
                 .map(item -> mapToOrderItemEntity(item, savedOrderEntity.getId()))
-                .collect(Collectors.toList());
+                .toList();
         if (!orderItemEntities.isEmpty()) {
             orderItemJpaRepository.saveAll(orderItemEntities);
         }
@@ -71,7 +71,7 @@ public class OrderPersistenceAdapter implements SaveOrderPort {
         // 5. OrderHistoryEvent들 저장
         List<OrderHistoryEventEntity> historyEventEntities = order.getHistoryEvents().stream()
                 .map(event -> mapToOrderHistoryEventEntity(event, savedOrderEntity.getId()))
-                .collect(Collectors.toList());
+                .toList();
         if (!historyEventEntities.isEmpty()) {
             orderHistoryEventJpaRepository.saveAll(historyEventEntities);
         }
@@ -141,56 +141,55 @@ public class OrderPersistenceAdapter implements SaveOrderPort {
      */
     private Order mapToOrder(OrderEntity orderEntity, List<OrderItemEntity> orderItemEntities, 
                            List<OrderHistoryEventEntity> historyEventEntities) {
-        Order order = new Order();
-        order.setId(orderEntity.getId());
-        order.setUserId(orderEntity.getUser() != null ? orderEntity.getUser().getUserId() : null);
-        order.setTotalAmount(orderEntity.getTotalAmount());
-        order.setDiscountedAmount(orderEntity.getDiscountedAmount());
-        order.setDiscountAmount(orderEntity.getDiscountAmount());
-        order.setUserCouponId(orderEntity.getUserCouponId());
-        order.setStatus(Order.OrderStatus.valueOf(orderEntity.getStatus())); // string을 enum으로 변환
-        order.setOrderedAt(orderEntity.getOrderedAt());
-        order.setUpdatedAt(orderEntity.getUpdatedAt());
-        
         // OrderItem들 변환
         List<OrderItem> orderItems = orderItemEntities.stream()
                 .map(this::mapToOrderItem)
-                .collect(Collectors.toList());
-        order.setOrderItems(orderItems);
+                .toList();
         
         // OrderHistoryEvent들 변환
         List<OrderHistoryEvent> historyEvents = historyEventEntities.stream()
                 .map(this::mapToOrderHistoryEvent)
-                .collect(Collectors.toList());
-        order.setHistoryEvents(historyEvents);
+                .toList();
         
-        return order;
+        return Order.builder()
+                .id(orderEntity.getId())
+                .userId(orderEntity.getUser() != null ? orderEntity.getUser().getUserId() : null)
+                .totalAmount(orderEntity.getTotalAmount())
+                .discountedAmount(orderEntity.getDiscountedAmount())
+                .discountAmount(orderEntity.getDiscountAmount())
+                .userCouponId(orderEntity.getUserCouponId())
+                .status(Order.OrderStatus.valueOf(orderEntity.getStatus()))
+                .orderedAt(orderEntity.getOrderedAt())
+                .updatedAt(orderEntity.getUpdatedAt())
+                .orderItems(orderItems)
+                .historyEvents(historyEvents)
+                .build();
     }
 
     /**
      * OrderItemEntity를 OrderItem 도메인 객체로 변환
      */
     private OrderItem mapToOrderItem(OrderItemEntity entity) {
-        OrderItem orderItem = new OrderItem();
-        orderItem.setId(entity.getId());
-        orderItem.setOrderId(entity.getOrder().getId()); // OrderEntity의 ID를 사용
-        orderItem.setProductId(entity.getProduct().getId()); // ProductEntity의 ID를 사용
-        orderItem.setProductName(entity.getProductName());
-        orderItem.setQuantity(entity.getQuantity());
-        orderItem.setUnitPrice(entity.getUnitPrice());
-        orderItem.setTotalPrice(entity.getTotalPrice());
-        return orderItem;
+        return OrderItem.builder()
+                .id(entity.getId())
+                .orderId(entity.getOrder().getId())
+                .productId(entity.getProduct().getId())
+                .productName(entity.getProductName())
+                .quantity(entity.getQuantity())
+                .unitPrice(entity.getUnitPrice())
+                .totalPrice(entity.getTotalPrice())
+                .build();
     }
 
     /**
      * OrderHistoryEventEntity를 OrderHistoryEvent 도메인 객체로 변환
      */
     private OrderHistoryEvent mapToOrderHistoryEvent(OrderHistoryEventEntity entity) {
-        OrderHistoryEvent event = new OrderHistoryEvent();
-        event.setId(entity.getId());
-        event.setOrderId(entity.getOrderId());
-        event.setEventType(OrderHistoryEvent.OrderEventType.valueOf(entity.getEventType())); // string을 enum으로 변환
-        event.setOccurredAt(entity.getOccurredAt());
-        return event;
+        return OrderHistoryEvent.builder()
+                .id(entity.getId())
+                .orderId(entity.getOrderId())
+                .eventType(OrderHistoryEvent.OrderEventType.valueOf(entity.getEventType()))
+                .occurredAt(entity.getOccurredAt())
+                .build();
     }
 }
